# guji-ocr

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  终极傻瓜教程.md
.github/workflows/: test.yml
agent_c/: __init__.py  cli.py  corrector.py
agent_qw/: __init__.py  cli.py  config.py  export.py  io_utils.py  pipeline.py  schemas.py
agent_qw/llm/: base.py  openai_compat.py  prompts.py
agent_qw/ocr/: base.py  llm_vision.py
agent_qw/postprocess/: normalize.py
agent_qw/vision/: preprocess.py
agent_verify/: __init__.py  cli.py  detector.py  verifier.py
shared/: __init__.py  config.py
tests/: test_config.py  test_export.py  test_normalize.py  test_schemas.py  test_verifier.py
