[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-qw"
version = "0.1.0"
description = "agent_qw — 古籍识别 Agent: preprocessing + multimodal LLM OCR for classical Chinese texts"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5",

    "pymupdf>=1.23",
    "pdf2image>=1.16",
    "Pillow>=9.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "requests>=2.28",
    "numpy>=1.21",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agent-qw = "agent_qw.cli:main"
agent-verify = "agent_verify.cli:main"
agent-correct = "agent_c.cli:main"

[tool.setuptools.packages.find]
where = ["."]
